dependented libs fix
Signed-off-by: lvqiang214 <lvqiang1@huawei.com>

--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -41,7 +41,7 @@ ohos_shared_library("intell_voice_proxy") {
     "hdf_core:libhdf_ipc_adapter",
     "hdf_core:libhdf_utils",
     "hdf_core:libhdi",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
@@ -130,10 +130,10 @@ ohos_shared_library("intell_voice_server") {
     "drivers_interface_intelligent_voice:libintell_voice_trigger_proxy_1.0",
     "eventhandler:libeventhandler",
     "hdf_core:libhdi",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
     "kv_store:distributeddata_inner",
-    "multimedia_audio_framework:audio_capturer",
+    "audio_framework:audio_capturer",
     "relational_store:native_rdb",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
