--- a/frameworks/js/BUILD.gn
+++ b/frameworks/js/BUILD.gn
@@ -60,7 +60,7 @@ ohos_shared_library("intelligentvoice") {
   external_deps = [
     "ability_base:want",
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
