--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -41,7 +41,7 @@ ohos_shared_library("intellvoice_native") {
     "ability_base:base",
     "ability_base:want",
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
