--- a/frameworks/js/BUILD.gn
+++ b/frameworks/js/BUILD.gn
@@ -60,6 +60,7 @@ ohos_shared_library("intelligentvoice") {
   external_deps = [
     "ability_base:want",
     "c_utils:utils",
+    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
     "hilog:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
