--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -39,6 +39,7 @@ ohos_shared_library("intellvoice_native") {
     "ability_base:base",
     "ability_base:want",
     "c_utils:utils",
+    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
     "hilog:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
