--- a/sa_profile/BUILD.gn
+++ b/sa_profile/BUILD.gn
@@ -14,6 +14,7 @@
 import("//build/ohos/sa_profile/sa_profile.gni")
 
 ohos_sa_profile("intell_voice_service_sa_profile") {
-  sources = [ "312.xml" ]
+  sources = [ "intell_voice_service.json" ]
+  
   part_name = "intelligent_voice_framework"
 }
