conditional start service
Signed-off-by: lvqiang214 <lvqiang1@huawei.com>

--- a/services/etc/intell_voice_service.cfg
+++ b/services/etc/intell_voice_service.cfg
@@ -12,11 +12,13 @@
     ],
     "services" : [{
             "name" : "intell_voice_service",
-            "path" : ["/system/bin/sa_main", "/system/profile/intell_voice_service.xml"],
+            "path" : ["/system/bin/sa_main", "/system/profile/intell_voice_service.json"],
+            "ondemand" : true,
             "uid" : "intell_voice",
             "gid" : ["system","intell_voice"],
             "permission" : ["ohos.permission.MANAGE_INTELLIGENT_VOICE"],
-            "disabled" : 1
+            "disabled" : 1,
+            "secon" : "u:r:intell_voice_service:s0"
         }
     ]
 }
