--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -16,6 +16,7 @@ import("//build/ohos.gni")
 ohos_shared_library("intellvoice_native") {
   sources = [
     "enroll_intell_voice_engine.cpp",
+    "intell_voice_load_callback.cpp",
     "intell_voice_manager.cpp",
     "wakeup_intell_voice_engine.cpp",
   ]
