--- a/services/etc/intell_voice_service.cfg
+++ b/services/etc/intell_voice_service.cfg
@@ -16,7 +16,10 @@
             "ondemand" : true,
             "uid" : "intell_voice",
             "gid" : ["system","intell_voice"],
-            "permission" : ["ohos.permission.MANAGE_INTELLIGENT_VOICE"],
+            "permission" : [
+                "ohos.permission.MANAGE_INTELLIGENT_VOICE",
+                "ohos.permission.MICROPHONE"
+            ],
             "disabled" : 1,
             "secon" : "u:r:intell_voice_service:s0"
         }
