--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -55,6 +55,7 @@ ohos_shared_library("intell_voice_server") {
 
   sources = [
     "intell_voice_engine/server/base/adapter_callback_service.cpp",
+    "intell_voice_engine/server/base/audio_capturer_source_change_callback.cpp",
     "intell_voice_engine/server/base/audio_source.cpp",
     "intell_voice_engine/server/base/engine_base.cpp",
     "intell_voice_engine/server/base/engine_factory.cpp",
@@ -73,6 +74,7 @@ ohos_shared_library("intell_voice_server") {
     "intell_voice_engine/server/utils/system_event_observer.cpp",
     "intell_voice_engine/server/wakeup/wakeup_adapter_listener.cpp",
     "intell_voice_engine/server/wakeup/wakeup_engine.cpp",
+    "intell_voice_engine/server/wakeup/wakeup_source_stop_callback.cpp",
     "intell_voice_trigger/server/connector_mgr/trigger_callback_impl.cpp",
     "intell_voice_trigger/server/connector_mgr/trigger_connector.cpp",
     "intell_voice_trigger/server/connector_mgr/trigger_connector_internal_impl.cpp",
@@ -89,8 +91,6 @@ ohos_shared_library("intell_voice_server") {
   ]
 
   include_dirs = [
-    "../../../multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
-    "../../../multimedia/audio_framework/interfaces/inner_api/native/audiocapturer/include",
     "../../../ai/intelligent_voice_framework/utils",
     "intell_voice_engine",
     "intell_voice_engine/server/base",
@@ -118,6 +118,7 @@ ohos_shared_library("intell_voice_server") {
     "ability_runtime:dataobs_manager",
     "access_token:libaccesstoken_sdk",
     "audio_framework:audio_capturer",
+    "audio_framework:audio_client",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
     "data_share:datashare_consumer",
@@ -126,6 +127,7 @@ ohos_shared_library("intell_voice_server") {
     "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.0",
     "drivers_interface_intelligent_voice:libintell_voice_trigger_proxy_1.0",
     "eventhandler:libeventhandler",
+    "hdf_core:libhdf_host",
     "hdf_core:libhdi",
     "hilog:libhilog",
     "ipc:ipc_core",
