--- a/services/etc/intell_voice_service.cfg
+++ b/services/etc/intell_voice_service.cfg
@@ -6,6 +6,7 @@
                 "mkdir /data/service/el1/public/database/intell_voice_service_manager 02770 intell_voice ddms",
                 "mkdir /data/data/intell_voice 0760 intell_voice intell_voice",
                 "mkdir /data/data/intell_voice/pcm_data 0760 intell_voice intell_voice",
+                "mkdir /data/data/intell_voice/cache 0760 intell_voice intell_voice",
                 "start intell_voice_service"
             ]
         }
