--- a/tests/BUILD.gn
+++ b/tests/BUILD.gn
@@ -17,6 +17,7 @@ group("intell_voice_unit_test") {
     "unittest/intell_voice_test:client_unit_test",
     "unittest/intell_voice_test:trigger_manager_test",
     "unittest/intell_voice_test:trigger_unit_test",
+    "unittest/multiple_capturer_test:multiple_capturer_test",
   ]
 }
 
