--- a/services/etc/intell_voice_service.cfg
+++ b/services/etc/intell_voice_service.cfg
@@ -19,7 +19,9 @@
             "gid" : ["system","intell_voice"],
             "permission" : [
                 "ohos.permission.MANAGE_INTELLIGENT_VOICE",
-                "ohos.permission.MICROPHONE"
+                "ohos.permission.MICROPHONE",
+                "ohos.permission.GET_TELEPHONY_STATE",
+                "ohos.permission.READ_CALL_LOG"
             ],
             "disabled" : 1,
             "secon" : "u:r:intell_voice_service:s0"
