--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -55,7 +55,6 @@ ohos_shared_library("intell_voice_server") {
 
   sources = [
     "intell_voice_engine/server/base/adapter_callback_service.cpp",
-    "intell_voice_engine/server/base/audio_capturer_source_change_callback.cpp",
     "intell_voice_engine/server/base/audio_debug.cpp",
     "intell_voice_engine/server/base/audio_source.cpp",
     "intell_voice_engine/server/base/engine_base.cpp",
@@ -121,7 +120,9 @@ ohos_shared_library("intell_voice_server") {
     "audio_framework:audio_capturer",
     "audio_framework:audio_client",
     "c_utils:utils",
+    "call_manager:tel_call_manager_api",
     "common_event_service:cesfwk_innerkits",
+    "core_service:tel_core_service_api",
     "data_share:datashare_consumer",
     "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
     "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
@@ -136,6 +137,7 @@ ohos_shared_library("intell_voice_server") {
     "relational_store:native_rdb",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
+    "state_registry:tel_state_registry_api",
   ]
 
   subsystem_name = "ai"
