--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -117,6 +117,7 @@ ohos_shared_library("intell_voice_server") {
     "ability_runtime:app_context",
     "ability_runtime:dataobs_manager",
     "access_token:libaccesstoken_sdk",
+    "access_token:libtokenid_sdk",
     "audio_framework:audio_capturer",
     "audio_framework:audio_client",
     "c_utils:utils",
