reset wakeup engine after enroll
Signed-off-by: lvqiang214 <lvqiang1@huawei.com>

--- a/services/etc/intell_voice_service.cfg
+++ b/services/etc/intell_voice_service.cfg
@@ -21,7 +21,8 @@
                 "ohos.permission.MANAGE_INTELLIGENT_VOICE",
                 "ohos.permission.MICROPHONE",
                 "ohos.permission.GET_TELEPHONY_STATE",
-                "ohos.permission.READ_CALL_LOG"
+                "ohos.permission.READ_CALL_LOG",
+                "ohos.permission.START_ABILITIES_FROM_BACKGROUND"
             ],
             "disabled" : 1,
             "secon" : "u:r:intell_voice_service:s0"
