--- a/tests/fuzztest/intell_voice_fuzzer/BUILD.gn
+++ b/tests/fuzztest/intell_voice_fuzzer/BUILD.gn
@@ -16,20 +16,38 @@ import("//build/test.gni")
 
 module_output_path = "ai_intell_voice_framework/audio_intell_voice"
 
-ohos_fuzztest("CalculatorFuzzTest") {
+ohos_fuzztest("intell_voice_fuzzTest") {
   module_out_path = module_output_path
-  fuzz_config_file = "//foundation/ai/intelligent_voice_framework/tests/fuzztest/Calculator_fuzzer"
-  include_dirs = []
+  fuzz_config_file = "//foundation/ai/intelligent_voice_framework/tests/fuzztest/intell_voice_fuzzer"
+
+  include_dirs = [
+    "include",
+    "../../../services/intell_voice_engine",
+    "../../../interfaces/inner_api/native",
+    "../../../services/intell_voice_engine/server/base",
+    "../../../services/intell_voice_engine/proxy",
+    "../../../utils",
+  ]
+
   cflags = [
     "-g",
     "-O0",
     "-Wno-unused-variable",
     "-fno-omit-frame-pointer",
   ]
-  sources = [ "Calculator_fuzzer.cpp" ]
+  sources = [ "intell_voice_fuzzer.cpp" ]
+
+  deps = [ "../../../frameworks/native:intellvoice_native" ]
+
+  external_deps = [
+    "c_utils:utils",
+    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
+    "hilog:libhilog",
+    "ipc:ipc_core",
+  ]
 }
 
 group("fuzztest") {
   testonly = true
-  deps = [ ":CalculatorFuzzTest" ]
+  deps = [ ":intell_voice_fuzzTest" ]
 }
