--- a/tests/fuzztest/intell_voice_fuzzer/BUILD.gn
+++ b/tests/fuzztest/intell_voice_fuzzer/BUILD.gn
@@ -18,10 +18,9 @@ module_output_path = "ai_intell_voice_framework/audio_intell_voice"
 
 ohos_fuzztest("intell_voice_fuzzTest") {
   module_out_path = module_output_path
-  fuzz_config_file = "//foundation/ai/intelligent_voice_framework/tests/fuzztest/intell_voice_fuzzer"
+  fuzz_config_file = "../intell_voice_fuzzer"
 
   include_dirs = [
-    "include",
     "../../../services/intell_voice_engine",
     "../../../interfaces/inner_api/native",
     "../../../services/intell_voice_engine/server/base",
