--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -12,7 +12,6 @@
 # limitations under the License.
 
 import("//build/ohos.gni")
-import("../intell_voice_service.gni")
 
 ohos_shared_library("intell_voice_proxy") {
   sources = [
@@ -58,6 +57,7 @@ ohos_shared_library("intell_voice_server") {
     "intell_voice_engine/server/base/adapter_callback_service.cpp",
     "intell_voice_engine/server/base/audio_debug.cpp",
     "intell_voice_engine/server/base/audio_source.cpp",
+    "intell_voice_engine/server/base/data_operation_callback.cpp",
     "intell_voice_engine/server/base/engine_base.cpp",
     "intell_voice_engine/server/base/engine_factory.cpp",
     "intell_voice_engine/server/base/file_source.cpp",
@@ -127,7 +127,9 @@ ohos_shared_library("intell_voice_server") {
     "audio_framework:audio_capturer",
     "audio_framework:audio_client",
     "c_utils:utils",
+    "call_manager:tel_call_manager_api",
     "common_event_service:cesfwk_innerkits",
+    "core_service:tel_core_service_api",
     "data_share:datashare_consumer",
     "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
     "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
@@ -137,21 +139,14 @@ ohos_shared_library("intell_voice_server") {
     "hdf_core:libhdf_host",
     "hdf_core:libhdi",
     "hilog:libhilog",
+    "huks:libhukssdk",
     "ipc:ipc_core",
     "kv_store:distributeddata_inner",
     "relational_store:native_rdb",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
+    "state_registry:tel_state_registry_api",
   ]
-
-  if (telephony_service_enable) {
-    external_deps += [
-      "call_manager:tel_call_manager_api",
-      "core_service:tel_core_service_api",
-      "state_registry:tel_state_registry_api",
-    ]
-    defines = [ "SUPPORT_TELEPHONY_SERVICE" ]
-  }
 
   subsystem_name = "ai"
   part_name = "intelligent_voice_framework"
