huks hdi interface adapt
Signed-off-by: lvqiang214 <lvqiang1@huawei.com>

--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -63,6 +63,7 @@ ohos_shared_library("intell_voice_server") {
     "intell_voice_engine/server/base/file_source.cpp",
     "intell_voice_engine/server/enroll/enroll_adapter_listener.cpp",
     "intell_voice_engine/server/enroll/enroll_engine.cpp",
+    "intell_voice_engine/server/hdi_adapter/engine_host_manager.cpp",
     "intell_voice_engine/server/sa/intell_voice_engine_arbitration.cpp",
     "intell_voice_engine/server/sa/intell_voice_engine_callback_proxy.cpp",
     "intell_voice_engine/server/sa/intell_voice_engine_stub.cpp",
@@ -100,6 +101,7 @@ ohos_shared_library("intell_voice_server") {
     "intell_voice_engine",
     "intell_voice_engine/server/base",
     "intell_voice_engine/server/enroll",
+    "intell_voice_engine/server/hdi_adapter",
     "intell_voice_engine/server/update",
     "intell_voice_engine/server/sa",
     "intell_voice_engine/server/utils",
@@ -134,6 +136,7 @@ ohos_shared_library("intell_voice_server") {
     "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
     "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
     "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.0",
+    "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.1",
     "drivers_interface_intelligent_voice:libintell_voice_trigger_proxy_1.0",
     "eventhandler:libeventhandler",
     "hdf_core:libhdf_host",
