support normal wakeup
Signed-off-by: lvqiang214 <lvqiang1@huawei.com>

--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -83,6 +83,7 @@ ohos_shared_library("intell_voice_server") {
     "intell_voice_engine/server/wakeup/wakeup_source_stop_callback.cpp",
     "intell_voice_trigger/server/connector_mgr/trigger_callback_impl.cpp",
     "intell_voice_trigger/server/connector_mgr/trigger_connector.cpp",
+    "intell_voice_trigger/server/connector_mgr/trigger_host_manager.cpp",
     "intell_voice_trigger/server/connector_mgr/trigger_connector_internal_impl.cpp",
     "intell_voice_trigger/server/connector_mgr/trigger_connector_internal_validation.cpp",
     "intell_voice_trigger/server/connector_mgr/trigger_connector_mgr.cpp",
@@ -138,6 +139,7 @@ ohos_shared_library("intell_voice_server") {
     "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.0",
     "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.1",
     "drivers_interface_intelligent_voice:libintell_voice_trigger_proxy_1.0",
+    "drivers_interface_intelligent_voice:libintell_voice_trigger_proxy_1.1",
     "eventhandler:libeventhandler",
     "hdf_core:libhdf_host",
     "hdf_core:libhdi",
