--- a/frameworks/js/BUILD.gn
+++ b/frameworks/js/BUILD.gn
@@ -35,8 +35,10 @@ ohos_shared_library("intelligentvoice") {
     "napi/intell_voice_manager_napi.cpp",
     "napi/intell_voice_napi_queue.cpp",
     "napi/intell_voice_napi_util.cpp",
+    "napi/intell_voice_update_callback_napi.cpp",
     "napi/service_change_callback_napi.cpp",
     "napi/wakeup_intell_voice_engine_napi.cpp",
+    "napi/wakeup_manager_napi.cpp",
   ]
 
   include_dirs = [
