--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -19,6 +19,8 @@ ohos_shared_library("intell_voice_proxy") {
     "intell_voice_engine/proxy/intell_voice_engine_callback_stub.cpp",
     "intell_voice_engine/proxy/intell_voice_engine_proxy.cpp",
     "intell_voice_engine/proxy/intell_voice_service_proxy.cpp",
+    "intell_voice_engine/proxy/intell_voice_update_callback_stub.cpp",
+    "intell_voice_engine/proxy/update_callback_inner.cpp",
   ]
 
   include_dirs = [
@@ -65,6 +67,7 @@ ohos_shared_library("intell_voice_server") {
     "intell_voice_engine/server/enroll/enroll_adapter_listener.cpp",
     "intell_voice_engine/server/enroll/enroll_engine.cpp",
     "intell_voice_engine/server/hdi_adapter/engine_host_manager.cpp",
+    "intell_voice_engine/server/hdi_adapter/adapter_host_manager.cpp",
     "intell_voice_engine/server/sa/intell_voice_engine_arbitration.cpp",
     "intell_voice_engine/server/sa/intell_voice_engine_callback_proxy.cpp",
     "intell_voice_engine/server/sa/intell_voice_engine_stub.cpp",
@@ -73,7 +76,11 @@ ohos_shared_library("intell_voice_server") {
     "intell_voice_engine/server/sa/intell_voice_service_stub.cpp",
     "intell_voice_engine/server/update/update_adapter_listener.cpp",
     "intell_voice_engine/server/update/update_engine.cpp",
-    "intell_voice_engine/server/update/update_engine_controller.cpp",
+    "intell_voice_engine/server/update/update_engine_utils.cpp",
+    "intell_voice_engine/server/sa/intell_voice_update_callback_proxy.cpp",
+    "intell_voice_engine/server/update/controller/update_engine_controller.cpp",
+    "intell_voice_engine/server/update/controller/strategy/silence_update_strategy.cpp",
+    "intell_voice_engine/server/update/controller/strategy/clone_update_strategy.cpp",
     "intell_voice_engine/server/utils/history_info_mgr.cpp",
     "intell_voice_engine/server/utils/service_db_helper.cpp",
     "intell_voice_engine/server/utils/switch_observer.cpp",
@@ -107,6 +114,8 @@ ohos_shared_library("intell_voice_server") {
     "intell_voice_engine/server/enroll",
     "intell_voice_engine/server/hdi_adapter",
     "intell_voice_engine/server/update",
+    "intell_voice_engine/server/update/controller",
+    "intell_voice_engine/server/update/controller/strategy",
     "intell_voice_engine/server/sa",
     "intell_voice_engine/server/utils",
     "intell_voice_engine/server/wakeup",
@@ -129,7 +138,6 @@ ohos_shared_library("intell_voice_server") {
     "ability_runtime:app_context",
     "ability_runtime:dataobs_manager",
     "access_token:libaccesstoken_sdk",
-    "access_token:libtokenid_sdk",
     "audio_framework:audio_capturer",
     "audio_framework:audio_client",
     "c_utils:utils",
@@ -141,6 +149,7 @@ ohos_shared_library("intell_voice_server") {
     "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
     "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.0",
     "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.1",
+    "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.2",
     "drivers_interface_intelligent_voice:libintell_voice_trigger_proxy_1.0",
     "drivers_interface_intelligent_voice:libintell_voice_trigger_proxy_1.1",
     "eventhandler:libeventhandler",
