--- a/services/etc/intell_voice_service.cfg
+++ b/services/etc/intell_voice_service.cfg
@@ -22,7 +22,9 @@
                 "ohos.permission.MICROPHONE",
                 "ohos.permission.GET_TELEPHONY_STATE",
                 "ohos.permission.READ_CALL_LOG",
-                "ohos.permission.START_ABILITIES_FROM_BACKGROUND"
+                "ohos.permission.START_ABILITIES_FROM_BACKGROUND",
+                "ohos.permission.WAKEUP_VOICE",
+                "ohos.permission.WAKEUP_VISION"
             ],
             "disabled" : 1,
             "secon" : "u:r:intell_voice_service:s0"
