--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -52,6 +52,9 @@ ohos_shared_library("intellvoice_native") {
     "ability_base:want",
     "c_utils:utils",
     "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
+    "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.0",
+    "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.1",
+    "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.2",
     "hilog:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
