--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -38,6 +38,9 @@ ohos_shared_library("intell_voice_proxy") {
   external_deps = [
     "c_utils:utils",
     "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
+    "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.0",
+    "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.1",
+    "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.2",
     "hdf_core:libhdf_host",
     "hdf_core:libhdf_ipc_adapter",
     "hdf_core:libhdf_utils",
