--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -170,6 +170,7 @@ ohos_shared_library("intell_voice_server") {
     "ipc:ipc_core",
     "jsoncpp:jsoncpp",
     "kv_store:distributeddata_inner",
+    "power_manager:powermgr_client",
     "relational_store:native_rdb",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
