--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -174,6 +174,7 @@ ohos_shared_library("intell_voice_server") {
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
     "state_registry:tel_state_registry_api",
+    "power_manager:powermgr_client",
   ]
 
   subsystem_name = "ai"
