--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -12,6 +12,7 @@
 # limitations under the License.
 
 import("//build/ohos.gni")
+import("../intell_voice_service.gni")
 
 ohos_shared_library("intell_voice_proxy") {
   sources = [
@@ -157,9 +158,7 @@ ohos_shared_library("intell_voice_server") {
     "audio_framework:audio_capturer",
     "audio_framework:audio_client",
     "c_utils:utils",
-    "call_manager:tel_call_manager_api",
     "common_event_service:cesfwk_innerkits",
-    "core_service:tel_core_service_api",
     "data_share:datashare_consumer",
     "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
     "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
@@ -181,8 +180,16 @@ ohos_shared_library("intell_voice_server") {
     "relational_store:native_rdb",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
-    "state_registry:tel_state_registry_api",
   ]
+
+  if (telephony_service_enable) {
+    external_deps += [
+      "call_manager:tel_call_manager_api",
+      "core_service:tel_core_service_api",
+      "state_registry:tel_state_registry_api",
+    ]
+    defines += [ "SUPPORT_TELEPHONY_SERVICE" ]
+  }
 
   subsystem_name = "ai"
   part_name = "intelligent_voice_framework"
