--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -183,6 +183,15 @@ ohos_shared_library("intell_voice_server") {
     "samgr:samgr_proxy",
   ]
 
+  sanitize = {
+    cfi = true
+    cfi_cross_dso = true
+    cfi_vcall_icall_only = true
+    debug = false
+  }
+
+  branch_protector_ret = "pac_ret"
+
   if (telephony_service_enable) {
     external_deps += [
       "call_manager:tel_call_manager_api",
