--- a/frameworks/js/BUILD.gn
+++ b/frameworks/js/BUILD.gn
@@ -63,6 +63,8 @@ ohos_shared_library("intelligentvoice") {
 
   external_deps = [
     "ability_base:want",
+    "access_token:libaccesstoken_sdk",
+    "access_token:libtokenid_sdk",
     "c_utils:utils",
     "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
     "hilog:libhilog",
