intell_voice_framework解耦telephony相关的三个部件call_manager、core_service、state_registry
Signed-off-by: liujiaxin25 <liujiaxin43@h-partners.com>

--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -157,7 +157,7 @@ ohos_shared_library("intell_voice_server") {
       "core_service:tel_core_service_api",
       "state_registry:tel_state_registry_api",
     ]
-    defines += [ "SUPPORT_TELEPHONY_SERVICE" ]
+    cflags_cc += [ "-DSUPPORT_TELEPHONY_SERVICE" ]
   }
 
   subsystem_name = "ai"
