--- a/services/etc/intell_voice_service.cfg
+++ b/services/etc/intell_voice_service.cfg
@@ -24,7 +24,8 @@
                 "ohos.permission.READ_CALL_LOG",
                 "ohos.permission.START_ABILITIES_FROM_BACKGROUND",
                 "ohos.permission.WAKEUP_VOICE",
-                "ohos.permission.WAKEUP_VISION"
+                "ohos.permission.WAKEUP_VISION",
+                "ohos.permission.PERMISSION_USED_STATS"
             ],
             "disabled" : 1,
             "secon" : "u:r:intell_voice_service:s0"
