--- a/utils/BUILD.gn
+++ b/utils/BUILD.gn
@@ -49,6 +49,7 @@ ohos_shared_library("intell_voice_utils") {
 
   external_deps = [
     "access_token:libaccesstoken_sdk",
+    "access_token:libprivacy_sdk",
     "access_token:libtokenid_sdk",
     "c_utils:utils",
     "ffrt:libffrt",
