--- a/services/intell_voice_trigger/test/unittest/BUILD.gn
+++ b/services/intell_voice_trigger/test/unittest/BUILD.gn
@@ -56,3 +56,69 @@ ohos_unittest("intelligent_voice_trigger_unit_test") {
 
   sources = [ "src/trigger_detector_unit_test.cpp" ]
 }
+
+ohos_unittest("trigger_manager_test") {
+  testonly = true
+  module_out_path = module_output_path
+  include_dirs = [
+    "../../server",
+    "../../server/connector_mgr",
+    "../../../../utils",
+  ]
+
+  use_exceptions = true
+
+  cflags = [
+    "-Wall",
+    "-Werror",
+    "-Wno-macro-redefined",
+  ]
+
+  cflags_cc = [
+    "-Wno-error=unused-parameter",
+    "-DHILOG_ENABLE",
+    "-DENABLE_DEBUG",
+    "-DSUPPORT_TELEPHONY_SERVICE",
+    "-fno-access-control",
+  ]
+
+  deps = [ "../../../../services:intell_voice_server" ]
+
+  external_deps = [
+    "ability_base:want",
+    "ability_base:zuri",
+    "ability_runtime:ability_manager",
+    "ability_runtime:app_context",
+    "ability_runtime:dataobs_manager",
+    "access_token:libaccesstoken_sdk",
+    "audio_framework:audio_capturer",
+    "audio_framework:audio_client",
+    "c_utils:utils",
+    "call_manager:tel_call_manager_api",
+    "common_event_service:cesfwk_innerkits",
+    "core_service:tel_core_service_api",
+    "data_share:datashare_consumer",
+    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
+    "drivers_interface_intelligent_voice:libintell_voice_trigger_proxy_1.0",
+    "drivers_interface_intelligent_voice:libintell_voice_trigger_proxy_1.1",
+    "eventhandler:libeventhandler",
+    "ffrt:libffrt",
+    "hdf_core:libhdf_host",
+    "hdf_core:libhdi",
+    "hilog:libhilog",
+    "huks:libhukssdk",
+    "ipc:ipc_core",
+    "jsoncpp:jsoncpp",
+    "kv_store:distributeddata_inner",
+    "power_manager:powermgr_client",
+    "relational_store:native_rdb",
+    "safwk:system_ability_fwk",
+    "samgr:samgr_proxy",
+    "state_registry:tel_state_registry_api",
+  ]
+
+  sources = [
+    "src/trigger_manager_test.cpp",
+    "src/trigger_manager_unit_test.cpp",
+  ]
+}
